# MirageSentinel_Deception_Lab

./: .env.example  .gitignore  404.html  DEPLOYMENT.md  Dockerfile.backend  Dockerfile.frontend  FINALIZATION_REPORT.md  LICENSE  NOTICE.md  PROJECT_IDENTITY.md  PROJECT_PROVENANCE.md  README.md  RENDER_DEPLOYMENT_GUIDE.md  docker-compose.yml  index.html  render.yaml  run-all.sh  stop-all.sh
assets/: ayush-premium.css  ayush-premium.js
backend/: .env.example  Dockerfile  README.md  package-lock.json  package.json
backend/jobs/: syncMitreAttack.ts
backend/scripts/: initialSync.ts  seedVMs.ts  testClassification.ts  testSimulationWithMitre.ts
backend/src/: server.ts
control-plane/generator/: vagrant.go
control-plane/template/: Vagrantfile.tmpl
docs/: ARCHITECTURE_AND_QUALITY_NOTES.md  NOVELTY_AND_RESUME_POSITIONING.md  REVAMP_CHANGELOG.md  architecture.md  simulations.md  testing.md
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/hooks/: use-websocket.ts  (+2 more)
k8s/: configmap-haproxy.yaml  configmap-web.yaml  configmap.yaml  deploy.sh  kind-config.yaml  namespace.yaml  network-policy.yaml  rl-rbac.yaml  rl-sidecar-example.yaml  teardown.sh
rl-training/: README.md  data_generator.py  export_onnx.py  export_onnx_fixed.py  requirements.txt  test_roundtrip_onnx.py  train_ppo.py
scripts/: 10-sys-audit.sh  20-sys-command-audit.sh  crdt_binary_in_vm.sh  deploy-crdt.sh  manage-vms.sh  setup-infrastructure.sh  start-lite-testbed.sh
scripts/rl/: Cargo.toml  Dockerfile.sidecar  inference.py  rl_poller.py
scripts/rl/examples/: simple_onnx_inference.rs
scripts/rl/models/: README.md  miragesentinel_rl_policy.onnx  miragesentinel_rl_policy.onnx.data
scripts/rl/src/: feature_extractor.rs  inference.rs  main.rs  types.rs
simulations/: README.md  doc.md  miragesentinel_net.xml
(+677 files in other folders)
